--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -9,9 +9,12 @@
     </head>
 
     <body>
+        {{ template "navbar" }}
 
         <div class="contaner-fluid">
             {{ template "yield" .}}
+
+            {{ template "footer" }}
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
